@@ -404,6 +404,18 @@ public class FactionData extends StdWebMacro
 						final Ability A=e.nextElement();
 						str.append("<OPTION VALUE=\""+A.ID()+"\">"+CMStrings.limit(A.ID(),20));
 					}
+					final Set<String> socDone = new HashSet<String>();
+					final XMLLibrary xml=CMLib.xml();
+					for (final Enumeration<Social> s=CMLib.socials().getAllSocials();s.hasMoreElements();)
+					{
+						final Social S=s.nextElement();
+						str.append("<OPTION VALUE=\""+xml.parseOutAngleBrackets(S.name())+"\">"+CMStrings.limit("Soc: "+xml.parseOutAngleBrackets(CMStrings.capitalizeAndLower(S.name())),20));
+						if(!socDone.contains(S.baseName()))
+						{
+							socDone.add(S.baseName());
+							str.append("<OPTION VALUE=\""+S.baseName()+" *\">"+CMStrings.limit("Soc: "+CMStrings.capitalizeAndLower(S.baseName()+" *"),20));
+						}
+					}
 					str.append("</SELECT>");
 					str.append("<BR>");
 					str.append("<INPUT TYPE=TEXT NAME=CHANGESTPARM"+showNum+" SIZE=20 MAXLENGTH=255 VALUE=\"\">");
