@@ -157,6 +157,8 @@ EXPERIENCE=NONE
 # Ability flag description - the name of one of the ability flags defined in the 
 #	coffeemud source code in interfaces/Ability.java.  HEALING, for instance, 
 #	if you want ANY healing abilities to initiate this change.
+# Social code - the social keyword AND either the optional argument (<T-NAME> or SELF)
+#   or an asterisk to catch any of the many usages.
 # ADDOUTSIDER - this trigger occurs every 10 ticks, and allows the a player who
 #   does not have standing in the faction, so long as they meet the target trigger
 #   requirements, to have the faction added using the ADD flag in the next 
